--- a/knowledge/pop_culture/swifties/qna.yaml
+++ b/knowledge/pop_culture/swifties/qna.yaml
@@ -5,19 +5,29 @@ created_by: mairin
 seed_examples:
   - context: |
       Critics have opined that Swift has redefined artist–fandom relationships
-      by establishing an intimate connection with Swifties. She has
-      frequently engaged with, helped, credited and prioritized her fans,
-      while the latter have offered unprecedented support and interest in her
-      works irrespective of her wavering reception in the media. They continued
-      to support Swift through her genre transitions and unexpected artistic
-      pivots, helped her during her highly publicized controversies such as the
-      2019 masters dispute, instigated the political scrutiny of Ticketmaster
-      that led to implementation of various laws, and stimulated economic
-      growth with the cultural impact of the Eras Tour. Swift's releases,
-      promotional efforts and fashion have garnered attention for
-      incorporating Easter eggs and clues that are decoded by Swifties and
-      considered part of her musical universe. The word Swiftie(s) was added to
-      the Oxford Dictionary of English in 2023.
+      by establishing an intimate connection with Swifties. She has frequently
+      engaged with, helped, credited and prioritized her fans, who have
+      offered unprecedented support and interest in her works irrespective of
+      her wavering reception in the media. They continued to support Swift
+      through her genre transitions, unexpected artistic pivots, and her
+      highly publicized controversies such as the 2019 masters dispute, while
+      instigating the political scrutiny of Ticketmaster that led to
+      implementation of various laws and stimulated economic growth with the
+      Eras Tour. Swift's releases, promotional efforts, and fashion have
+      garnered attention for incorporating Easter eggs and clues that are
+      decoded by Swifties and considered part of her musical universe.
+
+      Cultural analyses have variably described Swifties as a community of
+      interest, a subculture, and a near-metaverse, while academics have
+      studied them for their consumerism, content creation, social capital,
+      collective effervescence, organizing prolificacy, and interpersonal
+      relationships. The word Swiftie(s) was added to the Oxford Dictionary of
+      English in 2023. Swifties have also been a subject of criticism, with
+      some fans displaying disregard for Swift's privacy by publicizing her
+      real-time locations and engaging in verbal attack of individuals,
+      including celebrities, who malign Swift. On the other hand, some
+      Swifties criticize Swift for her lifestyle and professional choices,
+      which journalists disapprove as a parasocial relationship.
     questions_and_answers:
       - question: |
           Is Swiftie a real word?
@@ -38,17 +48,18 @@ seed_examples:
           relationships.
   - context: |
       The word "Swiftie" for a Swift fan gained popularity in the late 2000s.
-      Etymologically, the word is formed from Swift's name and the suffix "ie"
-       (or sometimes "y" as in "Swifty"), which is often used in diminutives
-       to imply affection. Swift stated in a 2012 Vevo interview that her fans
-       call themselves "Swifties", which she found "adorable". Swift filed the
-       term for trademark in March 2017. In 2023, Oxford Dictionary of English
-       defined Swiftie as a noun meaning "an enthusiastic fan of the singer
-       Taylor Swift." As per the dictionary, some words that collocate with
-       Swiftie in popular usage are "fandom", "die-hard", "hardcore" and
-       "self-proclaimed". According to Dictionary.com, the term Swiftie often
-       implies that the person is "a very passionate and loyal fan—as opposed
-       to just a casual listener.
+      Etymologically, the word is formed from Swift's name and the suffix
+      "ie", which is often used in diminutives to imply affection. Swift
+      stated in a 2012 Vevo interview that her fans call themselves
+      "Swifties", which she found "adorable". Swift filed the term for
+      trademark in March 2017. In 2023, Oxford Dictionary of English defined
+      Swiftie as a noun meaning "an enthusiastic fan of the singer Taylor
+      Swift." As per the dictionary, some words that collocate with Swiftie in
+      popular usage are "fandom", "die-hard", "hardcore" and "self-
+      proclaimed". According to Dictionary.com, the term Swiftie often implies
+      that the person is "a very passionate and loyal fan—as opposed to just a
+      casual listener."
+
     questions_and_answers:
       - question: |
           How does someone become a Swiftie?
@@ -92,17 +103,17 @@ seed_examples:
           "T-Swizzle" is a reference to a song called "Thug Story" that Taylor
           Swift released in 2009 with T-Pain.
   - context: |
-      Journalists describe Swift's works, celebrity, and the fanfare surrounding
-      them as a world of its own, dubbing it a music "universe" subject to
-      analyses by Swifties. Propagated by her prolific use of Easter eggs and
-      "unusually close connection with her fans", Swift is a source of myth in
-      popular culture. Her outfits, accessories, diction, color coding, and
-      numerology have also been Easter eggs. Swifties are known for their fan
-      theories, having gained a reputation as "the best online sleuths" for
-      breaking down and associating various elements they consider as clues
-      or Easter eggs. According to Bruce Arthur of Toronto Star, "Swift is
-      followed by fans whose dedication to her mythology is Byzantine and
-      layered and complex and messianic."
+      Journalists describe Swift's works, celebrity, and the fanfare
+      surrounding them as a world of its own, dubbing it a music "universe"
+      subject to analyses by Swifties. Propagated by her prolific use of
+      Easter eggs and "unusually close connection with her fans", Swift is a
+      source of myth in popular culture. Her outfits, accessories, diction,
+      color coding, and numerology have also been Easter eggs. Swifties are
+      known for their fan theories, having gained a reputation as "the best
+      online sleuths" for breaking down and associating various elements they
+      consider as clues or Easter eggs. According to Bruce Arthur of Toronto
+      Star, "Swift is followed by fans whose dedication to her mythology is
+      Byzantine and layered and complex and messianic."
     questions_and_answers:
       - question: |
           What are some different elements for Swiftie fan theories about
