--- a/.github/workflows/stale_bot.yml
+++ b/.github/workflows/stale_bot.yml
@@ -32,18 +32,18 @@ jobs:
         with:
           stale-issue-label: 'stale'
           stale-issue-message: >
-            This issue has been automatically marked as stale because it has not had activity within 60 days.
-            It will be automatically closed if no further activity occurs within 31 days.
+            This issue has been automatically marked as stale because it has not had activity within 30 days.
+            It will be automatically closed if no further activity occurs within the next 31 days.
           close-issue-message: >
             This issue has been automatically closed due to inactivity.
-          days-before-issue-stale: 60
+          days-before-issue-stale: 30
           days-before-issue-close: 31
           stale-pr-label: 'stale'
           stale-pr-message: >
             This pull request has been automatically marked as stale because it has not had activity within 15 days.
-            It will be automatically closed if no further activity occurs within 31 days.
+            It will be automatically closed if no further activity occurs within the next 31 days.
           close-pr-message: >
             This pull request has been automatically closed due to inactivity.
           days-before-pr-stale: 15
           days-before-pr-close: 31
-          exempt-pr-labels: e2e-ready
+          exempt-pr-labels: community-build-ready
