--- a/compositional_skills/extraction/annual_report/json/qna.yaml
+++ b/compositional_skills/extraction/annual_report/json/qna.yaml
@@ -1,6 +1,6 @@
 version: 3
 task_description: Teach the model how to find and extract given entities values in JSON format
-  from financial reports table data
+  from financial reports table data.
 created_by: sinny777
 seed_examples:
 
