--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,7 +52,6 @@ repos:
       - id: sort-simple-yaml
       - id: trailing-whitespace
       - id: mixed-line-ending
-      - id: detect-private-key
       - id: check-byte-order-marker
       - id: check-docstring-first
     repo: https://github.com/pre-commit/pre-commit-hooks
@@ -98,3 +97,8 @@ repos:
         files: \.en\.md
         types:
           - markdown
+  - repo: https://github.com/Yelp/detect-secrets
+    rev: v1.5.0
+    hooks:
+      - id: detect-secrets
+        args: ['--baseline', '.secrets.baseline']
