--- a/docs/template_qna.yaml
+++ b/docs/template_qna.yaml
@@ -6,6 +6,7 @@ seed_examples:
     <Context from the document associated with this set of sample q&a pairs.>
     questions_and_answers:
       - question: |
+        <A question used for synthetic data generation.>
         answer: |
       - question: |
         answer: |
