--- a/docs/template_qna.yaml
+++ b/docs/template_qna.yaml
@@ -8,7 +8,7 @@ seed_examples:
       - question: |
         <A question used for synthetic data generation. Based upon the previous context.>
         answer: |
-          <The desired response for the question based in previous context.>
+          <The desired response for the question. Based upon the previous context.>
       - question: |
         answer: |
       - question: |
