Moved the incorrect organized files
- We moved the synonyms and the editing/content to a more
resonable location for the taxonomy

Co-authored-by: Michelle Corbin <corbinm@us.ibm.com>
Signed-off-by: JJ Asghar <awesome@ibm.com>

--- a/compositional_skills/grounded/linguistics/writing/rewriting/qna.yaml
+++ b/compositional_skills/grounded/linguistics/writing/rewriting/qna.yaml
@@ -1,4 +1,5 @@
 created_by: aliciaibm
+version: 3
 seed_examples:
   - answer: 'Scientists are studying how our genes and the world around us affect our
       health.'
